changed some paths to files

--- a/source/companions.html
+++ b/source/companions.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../build/css/style.min.css" rel="stylesheet">
-  <link rel="icon" href="../build/favicon.webp" sizes="16x16" type="image/png">
+  <link href="css/style.min.css" rel="stylesheet">
+  <link rel="icon" href="favicon.webp" sizes="16x16" type="image/png">
   <title>Попутчики</title>
 </head>
 
