changed some paths

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/style.min.css" rel="stylesheet">
-  <link rel="icon" href="favicon.webp" sizes="16x16" type="image/png">
+  <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
   <title>Погнали!</title>
 </head>
 
@@ -558,7 +558,7 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/belgium-flag-medium.webp 1x, img/belgium-flag-medium@2x.webp 2x">
-                        <img class="users__flag  flag" src="img/belgium-flag-small.webp.webp"
+                        <img class="users__flag  flag" src="img/belgium-flag-small.webp"
                           srcset="img/belgium-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Бельгии" />
                       </picture>
                       <div class="users__flag-tooltip-4-position users__flag-tooltip-4--visible tooltip text">
