--- a/source/companions.html
+++ b/source/companions.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/style.min.css" rel="stylesheet">
-  <link rel="icon" href="favicon.webp" sizes="16x16" type="image/png">
+  <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
   <title>Попутчики</title>
 </head>
 
