modified some styles

--- a/source/directions.html
+++ b/source/directions.html
@@ -577,7 +577,7 @@
                       <div
                         class="add-plans__selected-country add-plans__selected-country-with-flag--width add-plans__select-country--1">
                         <span class="select__item text text--uper add-plans__select-country-text--1">
-                          Чехия
+                          Босния и Герцеговина
                         </span>
                         <svg class="add-plans__circle-icon add-plans__circle-icon--selected add-plans__circle-icon--1"
                           width="8" height="8">
@@ -603,9 +603,11 @@
                       <div class="add-plans__flag add-plans__flag--1">
                         <picture>
                           <source media="(min-width: 768px)"
-                            srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
-                          <img class="add-plans__flag-image select-input-list__flag" src="img/czech-flag-small.webp"
-                            srcset="img/czech-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Чехии" />
+                            srcset="img/bosnia-and-herzegovina-flag-medium.webp 1x, img/bosnia-and-herzegovina-flag-medium@2x.webp 2x">
+                          <img class="add-plans__flag-image select-input-list__flag"
+                            src="img/bosnia-and-herzegovina-flag-small.webp"
+                            srcset="img/bosnia-and-herzegovina-flag-small@2x.webp 2x" width="35" height="24"
+                            alt="Флаг Боснии и Герцеговины" />
                         </picture>
                       </div>
                     </div>
