changed some images

--- a/source/companions.html
+++ b/source/companions.html
@@ -1321,7 +1321,7 @@
                           <source media="(min-width: 768px)"
                             srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
                           <img class="companions__flag flags-list__icon flag" src="img/czech-flag-small.webp"
-                            srcset="img/czech-flag-small@2x.webp 2x" width="226" height="30" alt="Флаг Бельгии" />
+                            srcset="img/czech-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Чехии" />
                         </picture>
                         <span class="flags-list__flag-caption text">Чехия</span>
                       </div>
