--- a/source/companions.html
+++ b/source/companions.html
@@ -1741,7 +1741,7 @@
       </div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
