restored broken images

--- a/source/index.html
+++ b/source/index.html
@@ -654,8 +654,10 @@
     <section class="profile">
       <div class="profile__container container">
         <header class="profile__header">
-          <h2 class="profile__caption text text--caption">Добавьте <br class="profile__br">свой <br
-              class="profile__br">профиль</h2>
+          <h2 class="profile__caption text text--caption">
+            <pre>Добавьте <br class="profile__br">свой <br
+              class="profile__br">профиль</pre>
+          </h2>
         </header>
         <ol class="profile__list information-list">
           <li class="profile__information information-list__item information-list__item--digital-dark-theme">
