added default images to the index page

--- a/source/index.html
+++ b/source/index.html
@@ -20,14 +20,16 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo.webp 1x, img/logo@2x.webp 2x">
           <source media="(min-width: 768px)" srcset="img/logo-medium.webp 1x, img/logo-medium@2x.webp 2x">
-          <img class="page-header__logo logo" src="img/logo-mobile.webp" srcset="img/logo-mobile@2x.webp 2x" width="226"
+          <source srcset="img/logo-mobile.webp 1x, img/logo-mobile@2x.webp 2x">
+          <img class="page-header__logo logo" src="img/logo-mobile.png" srcset="img/logo-mobile@2x.png 2x" width="226"
             height="30" alt="Логотип" />
         </picture>
       </a>
       <a href="#" class="menu__logo-mobile-dark visually-hidden">
         <picture>
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
-          <img class="page-header__logo logo" src="img/logo-mobile-dark.webp" srcset="img/logo-mobile-dark@2x.webp 2x"
+          <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
+          <img class="page-header__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
         </picture>
       </a>
@@ -159,8 +161,9 @@
                 srcset="img/traveller-illustration-large.webp 1x, img/traveller-illustration-large@2x.webp 2x">
               <source media="(min-width: 768px)"
                 srcset="img/traveller-illustration-medium.webp 1x, img/traveller-illustration-medium@2x.webp 2x">
-              <img class="promo__traveller-icon" src="img/traveller-illustration.webp"
-                srcset="img/traveller-illustration@2x.webp 2x" width="192" height="255" alt="Путешественник" />
+              <source srcset="img/traveller-illustration.webp 1x, img/traveller-illustration@2x.webp 2x">
+              <img class="promo__traveller-icon" src="img/traveller-illustration.png"
+                srcset="img/traveller-illustration@2x.png 2x" width="192" height="255" alt="Путешественник" />
             </picture>
             <blockquote class="promo__review">
               <q class="promo__description text text--default">Лучшее приложение, <br> что я видел в жизни!</q>
@@ -203,7 +206,8 @@
       <div class="promo__menu-container container">
         <a href="#" class="menu__logo-mobile-dark menu__logo-mobile-dark--visible">
           <picture>
-            <img class="promo__logo logo" src="img/logo-large-dark.webp" srcset="img/logo-large-dark@2x.webp 2x"
+            <source srcset="img/logo-large-dark.webp 1x, img/logo-large-dark@2x.webp 2x">
+            <img class="promo__logo logo" src="img/logo-large-dark.png" srcset="img/logo-large-dark@2x.png 2x"
               width="226" height="30" alt="Логотип" />
           </picture>
         </a>
@@ -293,15 +297,17 @@
                 <picture>
                   <source media="(min-width: 768px)"
                     srcset="img/thailand-medium.webp 1x, img/thailand-medium@2x.webp 2x">
-                  <img class="countries__photo" src="img/thailand-small.webp" srcset="img/thailand-small@2x.webp 2x"
+                  <source srcset="img/thailand-small.webp 1x, img/thailand-small@2x.webp 2x">
+                  <img class="countries__photo" src="img/thailand-small.png" srcset="img/thailand-small@2x.png 2x"
                     width="270" height="110" alt="Тайланд" />
                 </picture>
                 <div class="countries__card-info card-list__info">
                   <picture>
                     <source media="(min-width: 768px)"
                       srcset="img/thailand-flag-medium.webp 1x, img/thailand-flag-medium@2x.webp 2x">
-                    <img class="countries__flag card-list__flag flag" src="img/thailand-flag-small.webp"
-                      srcset="img/thailand-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Тайланда" />
+                    <source srcset="img/thailand-flag-small.webp 1x, img/thailand-flag-small@2x.webp 2x">
+                    <img class="countries__flag card-list__flag flag" src="img/thailand-flag-small.png"
+                      srcset="img/thailand-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Тайланда" />
                   </picture>
                   <div class="countries__description">
                     <dl class="countries__visits card-list visits-list">
@@ -328,15 +334,17 @@
               <div class="countries__cards card-list__card">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/france-medium.webp 1x, img/france-medium@2x.webp 2x">
-                  <img class="countries__photo" src="img/france-small.webp" srcset="img/france-small@2x.webp 2x"
+                  <source srcset="img/france-small.webp 1x, img/france-small@2x.webp 2x">
+                  <img class="countries__photo" src="img/france-small.png" srcset="img/france-small@2x.png 2x"
                     width="270" height="110" alt="Франция" />
                 </picture>
                 <div class="countries__card-info card-list__info">
                   <picture>
                     <source media="(min-width: 768px)"
                       srcset="img/france-flag-medium.webp 1x, img/france-flag-medium@2x.webp 2x">
-                    <img class="countries__flag card-list__flag flag" src="img/france-flag-small.webp"
-                      srcset="img/france-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Франции" />
+                    <source srcset="img/france-flag-small.webp 1x, img/france-flag-small@2x.webp 2x">
+                    <img class="countries__flag card-list__flag flag" src="img/france-flag-small.png"
+                      srcset="img/france-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Франции" />
                   </picture>
                   <div class="countries__description">
                     <dl class="countries__visits card-list visits-list">
@@ -363,15 +371,17 @@
               <div class="countries__cards card-list__card">
                 <picture>
                   <source media="(min-width: 768px)" srcset="img/czech-medium.webp 1x, img/czech-medium@2x.webp 2x">
-                  <img class="countries__photo" src="img/czech-small.webp" srcset="img/czech-small@2x.webp 2x"
-                    width="270" height="110" alt="Чехия" />
+                  <source srcset="img/czech-small.webp 1x, img/czech-small@2x.webp 2x">
+                  <img class="countries__photo" src="img/czech-small.png" srcset="img/czech-small@2x.png 2x" width="270"
+                    height="110" alt="Чехия" />
                 </picture>
                 <div class="countries__card-info card-list__info">
                   <picture>
                     <source media="(min-width: 768px)"
                       srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
-                    <img class="countries__flag card-list__flag flag" src="img/czech-flag-small.webp"
-                      srcset="img/czech-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Чехии" />
+                    <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x">
+                    <img class="countries__flag card-list__flag flag" src="img/czech-flag-small.png"
+                      srcset="img/czech-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Чехии" />
                   </picture>
                   <div class="countries__description">
                     <dl class="countries__visits card-list visits-list">
@@ -426,7 +436,8 @@
                     srcset="img/tanya-photo-large.webp 1x, img/tanya-photo-large@2x.webp 2x">
                   <source media="(min-width: 768px)"
                     srcset="img/tanya-photo-medium.webp 1x, img/tanya-photo-medium@2x.webp 2x">
-                  <img class="users__photo" src="img/tanya-photo.webp" srcset="img/tanya-photo@2x.webp 2x" width="226"
+                  <source srcset="img/tanya-photo.webp 1x, img/tanya-photo@2x.webp 2x">
+                  <img class="users__photo" src="img/tanya-photo.png" srcset="img/tanya-photo@2x.png 2x" width="226"
                     height="30" alt="Фото Тани Фирсовой" />
                 </picture>
                 <div class="users__level general-info__level">
@@ -440,8 +451,9 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/seychelles-flag-medium.webp 1x, img/seychelles-flag-medium@2x.webp 2x">
-                        <img class="users__flag  flag" src="img/seychelles-flag-small.webp"
-                          srcset="img/seychelles-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Сейшилы" />
+                        <source srcset="img/seychelles-flag-small.webp 1x, img/seychelles-flag-small@2x.webp 2x">
+                        <img class="users__flag  flag" src="img/seychelles-flag-small.png"
+                          srcset="img/seychelles-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Сейшилы" />
                       </picture>
                       <div class="users__flag-tooltip-1-position users__flag-tooltip-1--visible tooltip text">
                         Сейшилы
@@ -451,8 +463,9 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/thailand-flag-medium.webp 1x, img/thailand-flag-medium@2x.webp 2x">
-                        <img class="users__flag  flag" src="img/thailand-flag-small.webp"
-                          srcset="img/thailand-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Тайланда" />
+                        <source srcset="img/thailand-flag-small.webp 1x, img/thailand-flag-small@2x.webp 2x">
+                        <img class="users__flag  flag" src="img/thailand-flag-small.png"
+                          srcset="img/thailand-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Тайланда" />
                       </picture>
                       <div class="users__flag-tooltip-2-position users__flag-tooltip-2--visible tooltip text">
                         Тайланд
@@ -462,8 +475,9 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/sri-lanka-flag-medium.webp 1x, img/sri-lanka-flag-medium@2x.webp 2x">
-                        <img class="users__flag  flag" src="img/sri-lanka-flag-small.webp"
-                          srcset="img/sri-lanka-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Шри-Ланки" />
+                        <source srcset="img/sri-lanka-flag-small.webp 1x, img/sri-lanka-flag-small@2x.webp 2x">
+                        <img class="users__flag  flag" src="img/sri-lanka-flag-small.png"
+                          srcset="img/sri-lanka-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Шри-Ланки" />
                       </picture>
                       <div class="users__flag-tooltip-3-position users__flag-tooltip-3--visible tooltip text">
                         Шри-Ланка
@@ -544,7 +558,8 @@
                     srcset="img/demin-photo-large.webp 1x, img/demin-photo-large@2x.webp 2x">
                   <source media="(min-width: 768px)"
                     srcset="img/demin-photo-medium.webp 1x, img/demin-photo-medium@2x.webp 2x">
-                  <img class="users__photo" src="img/demin-photo.webp" srcset="img/demin-photo@2x.webp 2x" width="226"
+                  <source srcset="img/demin-photo.webp 1x, img/demin-photo@2x.webp 2x">
+                  <img class="users__photo" src="img/demin-photo.png" srcset="img/demin-photo@2x.png 2x" width="226"
                     height="30" alt="Фото Петра Демина" />
                 </picture>
                 <div class="users__level general-info__level">
@@ -558,8 +573,9 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/belgium-flag-medium.webp 1x, img/belgium-flag-medium@2x.webp 2x">
-                        <img class="users__flag  flag" src="img/belgium-flag-small.webp"
-                          srcset="img/belgium-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Бельгии" />
+                        <source srcset="img/belgium-flag-small.webp 1x, img/belgium-flag-small@2x.webp 2x">
+                        <img class="users__flag  flag" src="img/belgium-flag-small.png"
+                          srcset="img/belgium-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Бельгии" />
                       </picture>
                       <div class="users__flag-tooltip-4-position users__flag-tooltip-4--visible tooltip text">
                         Бельгия
@@ -569,8 +585,9 @@
                       <picture>
                         <source media="(min-width: 768px)"
                           srcset="img/czech-flag-medium.webp 1x, img/czech-flag-medium@2x.webp 2x">
-                        <img class="users__flag flag" src="img/czech-flag-small.webp"
-                          srcset="img/czech-flag-small@2x.webp 2x" width="35" height="24" alt="Флаг Чехии" />
+                        <source srcset="img/czech-flag-small.webp 1x, img/czech-flag-small@2x.webp 2x">
+                        <img class="users__flag flag" src="img/czech-flag-small.png"
+                          srcset="img/czech-flag-small@2x.png 2x" width="35" height="24" alt="Флаг Чехии" />
                       </picture>
                       <div class="users__flag-tooltip-5-position users__flag-tooltip-5--visible tooltip text">
                         Чехия
@@ -805,7 +822,8 @@
       <picture>
         <source media="(min-width: 1440px)" srcset="img/map-large-icon.webp 1x, img/map-large-icon@2x.webp 2x">
         <source media="(min-width: 768px)" srcset="img/map-medium-icon.webp 1x, img/map-medium-icon@2x.webp 2x">
-        <img class="contacts__map" src="img/map-small-icon.webp" srcset="img/map-small-icon@2x.webp 2x" width="320"
+        <source srcset="img/map-small-icon.webp 1x, img/map-small-icon@2x.webp 2x">
+        <img class="contacts__map" src="img/map-small-icon.png" srcset="img/map-small-icon@2x.png 2x" width="320"
           height="424" alt="Карта" />
       </picture>
       <svg class="contacts__map-point" width="41" height="41">
@@ -820,7 +838,8 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-large-dark.webp 1x, img/logo-large-dark@2x.webp 2x">
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x">
-          <img class="page-fotter__logo logo" src="img/logo-mobile-dark.webp" srcset="img/logo-mobile-dark@2x.webp 2x"
+          <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x">
+          <img class="page-fotter__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
         </picture>
       </a>
